# Linkedin-Easy-Apply-Bot

./: .env  Dockerfile  accounts.py  cookies.json  database.py  linkedin_controller.py  pyproject.toml  receive.py  send.py
job_database/: app.py  link_publisher.py
old_scrapers/: linkedinlogin.py  linkedinlogin_with_cookies.py  linkedinlogin_with_cookies_fixed copy.py
send_job_links/: app.py
